Fixed header nav spacing

--- a/components/layout/main-nav.module.css
+++ b/components/layout/main-nav.module.css
@@ -18,6 +18,15 @@
     align-items: baseline;
     padding: 0;
   }
+
+  .projectIcon{
+    margin: 27px 0 0 10px;
+
+  }
+
+  .nav {
+    margin-left: 60%;
+  }
   
   .header .icon {
     color: white; 
